Added test Runner and option to run parallel tests.